# CppUdpComTest

./: .gitignore  CMakeLists.txt  CppUdpComTest.sln
Lib/: CMakeLists.txt  Lib.vcxproj  Lib.vcxproj.filters
Lib/Com/: SocketAdapter.cpp  SocketAdapter.h  SocketAdapterImpl_MSVC.h  SocketAdapterImpl_MacClang.h  SocketAdapterImpl_MacSock.h  SocketAdapterImpl_Socket.h  SocketAdapterImpl_Unknown.h  SocketAdapterImpl_WinMSVC.h  SocketAdapterImpl_WinSock.h  SocketDataTypes.h  SocketException.h
Lib/Com/Common/: ReceiveType.h
Lib/Com/Exception/: AppException.cpp  AppException.h  ExceptionBase.cpp  ExceptionBase.h  SocketException.cpp  SocketException.h
Lib/Com/Socket/: SocketAdapter.cpp  SocketAdapter.h  SocketAdapterImpl_Socket.h  SocketAdapterImpl_Unknown.h  SocketAdapterImpl_WinSock.h  SocketDataTypes.h  SocketInterface.cpp  SocketInterface.h  SocketReceiveData.cpp  SocketReceiveData.h  SocketReceiveQueue.cpp  SocketReceiveQueue.h
Lib/Com/Udp/: UdpMessage.cpp  UdpMessage.h  UdpMessageQueue.cpp  UdpMessageQueue.h  UdpMessageQueueMap.cpp  UdpMessageQueueMap.h  UdpPacketEncoder.cpp  UdpPacketEncoder.h  UdpPacketReceiver.cpp  UdpPacketReceiver.h  UdpPacketRxBuffer.cpp  UdpPacketRxBuffer.h  UdpPacketRxBufferMap.cpp  UdpPacketRxBufferMap.h  UdpPacketSender.cpp  UdpPacketSender.h  UdpPacketTypes.h  UdpReceiver.cpp  UdpReceiver.h  UdpSender.cpp  UdpSender.h  UdpSocketReceiver.cpp  UdpSocketReceiver.h  UdpSocketSender.cpp  UdpSocketSender.h
Lib/Config/: CompileSwitch.h
Lib/Utility/: AsyncTaskManager.cpp  AsyncTaskManager.h  CancellableThread.cpp  CancellableThread.h  CancellationPoint.cpp  CancellationPoint.h  Endian.h  FileLogger.cpp  FileLogger.h  FloatIntConverter.h  Logger.cpp  Logger.h  Singleton.cpp  Singleton.h  StackTracer.cpp  StackTracer.h  StringFormat.h  ThreadCancelledException.cpp  ThreadCancelledException.h  ThreadManager.cpp  ThreadManager.h  ThreadTypes.h
Receiver/: CMakeLists.txt  Receiver.cpp  Receiver.vcxproj  Receiver.vcxproj.filters  log.txt
Sender/: CMakeLists.txt  Sender.cpp  Sender.vcxproj  Sender.vcxproj.filters
Test/: CMakeLists.txt  Test.cpp  Test.vcxproj
